Be borne, files

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ layout: default
     <div class="jumbotron">
       <ul class="pull-right">
         {% for post in site.posts %}
-            <h3>
+            <h2>
               <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
                 <br>
                 <span class="pull-right"><small>{{ post.date | date: "%-d %B %Y" }}</small></span>
-            </h3>
+            </h2>
         {% endfor %}
       </ul>
 
@@ -22,6 +22,8 @@ layout: default
 Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin vitae sapien tempor, iaculis elit eget, ullamcorper sapien. Fusce velit tortor, condimentum ut suscipit quis, finibus ac velit. Duis vitae purus magna. Pellentesque pulvinar felis quis pellentesque rhoncus. Sed aliquam ullamcorper nunc, nec consectetur ante condimentum imperdiet. Maecenas pulvinar maximus justo, et malesuada nunc suscipit dapibus. Quisque imperdiet imperdiet erat non sodales. Nunc elementum velit non tortor venenatis, vitae eleifend orci pulvinar. Praesent pretium accumsan mauris in vestibulum. Vivamus ac ante commodo, facilisis felis sit amet, finibus orci. Aenean mauris ex, euismod et ullamcorper faucibus, pretium ac magna. Morbi magna lacus, elementum nec elit at, consequat lobortis turpis. Mauris viverra urna eu purus tempor, sed commodo felis tristique. Pellentesque at ante lacus. Praesent tincidunt ex mi, placerat aliquam mi vehicula non.</p>
     </div>
 
+
+    <!-- Footer content living here temporarily because soy noob" -->
       <div class="jumbotron">
         <div class="row">
             <div class="col-sm-4"><h4><small><a href="#">WHO WE ARE</a></small></h4></div>
