adding toronto poster

--- a/updates.html
+++ b/updates.html
@@ -34,7 +34,7 @@ permalink: /updates/
                       <img src="{{post.thumbnail}}"
                       alt="{{post.title}}"  class="pull-left img-responsive thumb margin10 img-thumbnail" />
                     {% endif %}
-                    <article class="excerpt">{{post.excerpt}}</article>
+                    <article>{{post.content}}</article>
                     <!-- <a class="pull-right marginBottom10" href="{{post.url | prepend: site.baseurl }}">Read More</a> -->
                   </div>
              </div>
